Cleared floats from hr with clear:both to fix hr position on firefox

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -75,6 +75,9 @@ h1 {
 hr {
     width: 33%;
     padding-bottom: 10px;
+
+    /*clear floats*/
+    clear:both;
 }
 
 #below-address {
